Fixing main menu overflow and fixing device list/refresh

--- a/src/scss/components/main-layout.scss
+++ b/src/scss/components/main-layout.scss
@@ -11,54 +11,56 @@ main-layout {
 		top: 0px;
 		left: 0px;
 		width: 100%;
-		height: 80px;
 		background-color: rgba(255, 255, 255, 0.95);
 		z-index: 3;
 
-		display: flex;
-		align-items: center;
-		overflow: hidden;
-
-		.left-nav {
-			flex: 1;
-
-			h2 {
-				padding-left: 30px;
-			}
-		}
-
-		.right-nav {
+		nav {
+			width: 100vw;
+			height: 80px;
 			display: flex;
-			padding-right: 30px;
+			align-items: center;
 
-			#save_btn {
-				text-align: center;
-				margin: 0px 10px;
-				width: 35px;
-				height: 35px;
+			.left-nav {
+				flex: 1;
 
-				transition: color 300ms ease;
-
-				&.saved {
-					color: green !important;
+				h2 {
+					padding-left: 30px;
 				}
 			}
 
-			#project_name {
-				margin: 0px 10px;
-				width: 200px;
-				font-size: 16px;
-			}
+			.right-nav {
+				display: flex;
+				padding-right: 30px;
 
-			#open_menu {
-				text-align: center;
-				margin: 0px 10px;
-				width: 35px;
-				height: 35px;
+				#save_btn {
+					text-align: center;
+					margin: 0px 10px;
+					width: 35px;
+					height: 35px;
 
-				svg {
-					top: 2px;
-					position: relative;
+					transition: color 300ms ease;
+
+					&.saved {
+						color: green !important;
+					}
+				}
+
+				#project_name {
+					margin: 0px 10px;
+					width: 200px;
+					font-size: 16px;
+				}
+
+				#open_menu {
+					text-align: center;
+					margin: 0px 10px;
+					width: 35px;
+					height: 35px;
+
+					svg {
+						top: 2px;
+						position: relative;
+					}
 				}
 			}
 		}
@@ -117,6 +119,7 @@ main-layout {
 			justify-content: space-evenly;
 			list-style-type: none;
 			padding: 0px;
+			margin-top: 0px;
 
 			& > li {
 				flex: 1;
@@ -124,6 +127,7 @@ main-layout {
 				margin: 0;
 				// border-top: solid 2px;
 				border-bottom: solid 2px;
+				background-color: var(--med-grey);
 
 				&.active {
 					border-top: solid 2px;
@@ -132,6 +136,7 @@ main-layout {
 					border-bottom: none;
 					border-top-left-radius: 5px;
 					border-top-right-radius: 5px;
+					background-color: initial;
 
 					a {
 						color: #666;
