--- a/src/scss/components/main-menu.scss
+++ b/src/scss/components/main-menu.scss
@@ -1,7 +1,8 @@
 main-menu {
 	position: absolute;
 	right: 0;
-	transform: translateX(100px);
+	transform: translateX(-60px);
+	// transform: translateX(100px);
 	overflow: hidden;
 	opacity: 0;
 	transition:
@@ -10,13 +11,11 @@ main-menu {
 	top: 90%;
 	background-color: white;
 	border: solid 1px;
-	z-index: 10;
 	width: 300px;
 	box-shadow: 2px 7px 14px -1px #262626;
 	pointer-events: none;
 
 	&.active {
-		transform: translateX(-60px);
 		opacity: 1;
 		pointer-events: all;
 	}
@@ -43,12 +42,14 @@ main-menu {
 			padding: 10px 10px 10px 20px;
 			border-bottom: solid 1px #666;
 			background-color: white;
+			align-items: center;
 
 			div {
 				flex: 1;
 			}
 
-			a {
+			a,
+			app-icon {
 				margin: 0px 5px;
 				cursor: pointer;
 			}
